# music-esolang

./: .gitignore  CMakeLists.txt  README.md  dev_guide.md
include/: ASTNodes.h  ASTVisitor.h  Codegen.h  Errors.h  Interpreter.h  MidiReader.h  Parser.h  Tokenizer.h
midi/: chordTest.mid  defiftest.mid  deftest.mid  fibbyrec.mid  fibbyrec1.mid  fibbyrec2.mid  fibiterative.mid  fibrecursion6.mid  fibrecursive.mid  fibrecursive1.mid  parserTest1.mid  parserTest2.mid  simpleTest.mid  test.mid  testtest.mid  tokentest1.mid  tokentest2.mid
src/: ASTPrinter.cpp  Codegen.cpp  Interpreter.cpp  MidiReader.cpp  Parser.cpp  Tokenizer.cpp  main.cpp
tests/: Makefile  interpreterTest  interpreterTest.cpp  main  midiTest  midiTest.cpp  parserTest  parserTest.cpp  tokenTest  tokenTest.cpp
